# dns-server

./: Cargo.toml  README.md
src/: lib.rs  main.rs  query_packet.txt  response_packet.txt
src/flag/: mod.rs
src/header/: mod.rs
src/question/: mod.rs
