[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
arbitrary-int = "1.3.0"
bitbybit = "1.3.3"
bytes = "1.3.0"                                  # helps manage buffers
deku = "0.18.1"
thiserror = "1.0.38"                             # error handling
